[package]
name = "accumulators"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }           # Async runtime
rusqlite = "0.25.3"                                           # SQLite for rust
anyhow = "1.0"                                                # Error handling
async-trait = "0.1.74"                                        # Async traits
hex = "0.4.3"                                                 # Hex encoding
sha3 = "0.10.8"                                               # Keccak hashing
starknet = "0.6.0"                                            # StarkNet pedersen
starknet-crypto = "0.6.0"                                     # StarkNet poseidon
primitive-types = "0.10"                                      # U256 primitive type in pedersen
uuid = { version = "1.4.1", features = ["v4"] }               # UUID
parking_lot = "0.12.1"                                        # Sync mutex
num-bigint = "0.4.4"                                          # Bigints in hashers (TODO: double check if needed)
num-traits = "0.2.17"                                         # Bigints in hashers (TODO: double check if needed)
indexmap = "2.1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }  # Benchmarking

[[bench]]
name = "mmr_benchmark"
harness = false

[[bench]]
name = "incremental_benchmark"
harness = false

[features]
default = ["store", "hasher"]
all = ["store", "sqlite", "hasher", "keccak", "poseidon", "pedersen", "mmr", "stacked_mmr", "draft_mmr", "merkle_tree", "incremental_merkle_tree"]
store = []
sqlite = ["store"]
hasher = []
keccak = ["hasher"]
poseidon = ["hasher"]
pedersen = ["hasher"]
mmr = ["hasher", "store"]
stacked_mmr = ["mmr"]
draft_mmr = ["stacked_mmr"]
merkle_tree = ["hasher", "store"]
incremental_merkle_tree = ["merkle_tree"]
